Co-authored-by: g4yxtr1 <g4yxtr1@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -6,51 +6,60 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="src/calc_style.css" />
     <script src="src/calc.js" defer></script>
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-    <div class="heading_area">
-      <h1>Calculator</h1>
+    <div class="container">
+      <div class="heading_area">
+        <h1>✿.•* ☆:*.Calculator.*:☆ *•.✿</h1>
+      </div>
+
+      <div class="io_area">
+        <div id="io_box" maxlength="121" minlength="1"></div>
+      </div>
+
+      <div class="input_elements">
+        <div class="row">
+          ˚୨୧⋆｡˚ ⋆ <button id="n1">1</button>
+          <button id="n2">2</button>
+          <button id="n3">3</button> ⋆ ˚｡⋆୨୧˚
+        </div>
+        <div class="row">
+          <button id="n4">4</button>
+          <button id="n5">5</button>
+          <button id="n6">6</button>
+        </div>
+
+        <div class="row">
+          <button id="n7">7</button>
+          <button id="n8">8</button>
+          <button id="n9">9</button>
+        </div>
+
+        <div class="row">
+          <button id="n0">0</button>
+        </div>
+
+        <div class="row">
+          <button id="add">+</button>
+          <button id="sub">-</button>
+          <button id="mult">×</button>
+          <button id="divi">÷</button> <br />
+        </div>
+
+        <div class="row">
+          . ݁₊ ⊹ . ݁˖ . ݁
+          <button id="calc_btn">=</button>
+          <button id="rst">Reset</button>
+          . ݁₊ ⊹ . ݁˖ . ݁
+        </div>
+
+        <div class="row">
+          <button id="gst">GST</button>
+          <button id="pi">𝜋</button>
+        </div>
+      </div>
     </div>
-
-    <div class="io_area">
-      <div id="io_box"></div>
-    </div>
-
-    <div class="input_elements">
-      <div>
-        <button id="n1">1</button>
-        <button id="n2">2</button>
-        <button id="n3">3</button>
-      </div>
-      <div>
-        <button id="n4">4</button>
-        <button id="n5">5</button>
-        <button id="n6">6</button>
-      </div>
-
-      <div>
-        <button id="n7">7</button>
-        <button id="n8">8</button>
-        <button id="n9">9</button>
-      </div>
-
-      <div>
-        <button id="gst">GST</button>
-        <button id="n0">0</button>
-        <button id="perc">%</button>
-      </div>
-
-      <div>
-        <button id="add">+</button>
-        <button id="sub">-</button>
-        <button id="mult">×</button>
-        <button id="divi">÷</button> <br />
-      </div>
-
-      <div>
-        <button id="calc_btn">=</button>
-        <button id="rst">Reset</button>
-      </div>
-    </div>
+    <div class="footer">Made by Gayatri</div>
   </body>
 </html>
