Co-authored-by: g4yxtr1 <g4yxtr1@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -20,43 +20,43 @@
 
       <div class="input_elements">
         <div class="row">
-          ˚୨୧⋆｡˚ ⋆ <button id="n1">1</button>
-          <button id="n2">2</button>
-          <button id="n3">3</button> ⋆ ˚｡⋆୨୧˚
+          ˚୨୧⋆｡˚ ⋆ <button id="n1" class="styled_btn">1</button>
+          <button id="n2" class="styled_btn">2</button>
+          <button id="n3" class="styled_btn">3</button> ⋆ ˚｡⋆୨୧˚
         </div>
         <div class="row">
-          <button id="n4">4</button>
-          <button id="n5">5</button>
-          <button id="n6">6</button>
-        </div>
-
-        <div class="row">
-          <button id="n7">7</button>
-          <button id="n8">8</button>
-          <button id="n9">9</button>
+          <button id="n4" class="styled_btn">4</button>
+          <button id="n5" class="styled_btn">5</button>
+          <button id="n6" class="styled_btn">6</button>
         </div>
 
         <div class="row">
-          <button id="n0">0</button>
+          <button id="n7" class="styled_btn">7</button>
+          <button id="n8" class="styled_btn">8</button>
+          <button id="n9" class="styled_btn">9</button>
         </div>
 
         <div class="row">
-          <button id="add">+</button>
-          <button id="sub">-</button>
-          <button id="mult">×</button>
-          <button id="divi">÷</button> <br />
+          <button id="n0" class="styled_btn">0</button>
+        </div>
+
+        <div class="row">
+          <button id="add" class="styled_btn">+</button>
+          <button id="sub" class="styled_btn">-</button>
+          <button id="mult" class="styled_btn">×</button>
+          <button id="divi" class="styled_btn">÷</button> <br />
         </div>
 
         <div class="row">
           . ݁₊ ⊹ . ݁˖ . ݁
-          <button id="calc_btn">=</button>
-          <button id="rst">Reset</button>
+          <button id="calc_btn" class="styled_btn">=</button>
+          <button id="rst" class="styled_btn">Reset</button>
           . ݁₊ ⊹ . ݁˖ . ݁
         </div>
 
         <div class="row">
-          <button id="gst">GST</button>
-          <button id="pi">𝜋</button>
+          <button id="gst" class="styled_btn">GST</button>
+          <button id="pi" class="styled_btn">𝜋</button>
         </div>
       </div>
     </div>
